--- a/LandTransaction/app/build.gradle
+++ b/LandTransaction/app/build.gradle
@@ -56,7 +56,41 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.activity:activity-compose:1.4.0'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Xml Converter
+    implementation ('com.github.smart-fun:XmlToJson:1.5.1') { transitive(true)}
+
+    //LifeCycle
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+
+    //  Coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+
+//    //Navigation
+//    implementation "androidx.navigation:navigation-compose:2.4.0-alpha07"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0"
+
+    //firebase
+//    implementation platform('com.google.firebase:firebase-bom:29.0.1')
+//    implementation 'com.google.firebase:firebase-analytics-ktx:20.0.1'
+//    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+//    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
+//    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.0'
+//    implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
