--- a/LandTransaction/app/build.gradle
+++ b/LandTransaction/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'com.google.accompanist:accompanist-flowlayout:0.19.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
